--- a/led-screen-tool/Objects/proj.build_log.htm
+++ b/led-screen-tool/Objects/proj.build_log.htm
@@ -18,17 +18,17 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.67.0.0 
 <h2>Project:</h2>
-C:\code\mcu\STC89C516RDPlus\led-screen-8x8\proj.uvproj
+C:\code\mcu\STC89C516RDPlus\led-screen-tool\proj.uvproj
 Project File Date:  06/09/2022
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 compiling main.c...
 linking...
-Program Size: data=25.0 xdata=0 code=275
+Program Size: data=25.0 xdata=0 code=273
 creating hex file from ".\Objects\proj"...
 ".\Objects\proj" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
