--- a/ds18b20/Objects/proj.build_log.htm
+++ b/ds18b20/Objects/proj.build_log.htm
@@ -19,30 +19,36 @@ CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.67.0.0 
 <h2>Project:</h2>
 C:\code\mcu\STC89C516RDPlus\ds18b20\proj.uvproj
-Project File Date:  06/27/2022
+Project File Date:  06/29/2022
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 compiling main.c...
+User\main.c(17): warning C231: 'gsmg_code': redefinition
 compiling 24c02.c...
 compiling ds18b20.c...
+App\ds18b20.c(138): warning C280: 'i': unreferenced local variable
 compiling iic.c...
 compiling key.c...
 compiling smg.c...
 compiling public.c...
 linking...
-*** ERROR L104: MULTIPLE PUBLIC DEFINITIONS
-    SYMBOL:  GSMG_CODE
-    MODULE:  .\Objects\smg.obj (SMG)
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_AT24C02_WRITE_ONE_BYTE?24C02
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_AT24C02_READ_ONE_BYTE?24C02
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_WRITE_BIT?DS18B20
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?READ_BIT?DS18B20
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_KEY_SCAN?KEY
-Program Size: data=70.0 xdata=0 code=2016
-Target not created.
-Build Time Elapsed:  00:00:01
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?DELAY_2US?PUBLIC
+Program Size: data=70.0 xdata=0 code=2034
+creating hex file from ".\Objects\proj"...
+".\Objects\proj" - 0 Error(s), 8 Warning(s).
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
